--- a/LiquidConnections/LiquidConnections.vcxproj.filters
+++ b/LiquidConnections/LiquidConnections.vcxproj.filters
@@ -7,13 +7,15 @@
     <ClCompile Include="stl\stl-loader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ui\ui.cpp" />
+    <ClCompile Include="voxel\voxel-space.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stl\stl-loader.h" />
-    <ClInclude Include="shepes\shape.h" />
-    <ClInclude Include="shepes\face.h" />
-    <ClInclude Include="shepes\vertex.h" />
-    <ClInclude Include="shepes\vector.h" />
     <ClInclude Include="ui\ui.h" />
+    <ClInclude Include="voxel\voxel-space.h" />
+    <ClInclude Include="shapes\face.h" />
+    <ClInclude Include="shapes\shape.h" />
+    <ClInclude Include="shapes\vector.h" />
+    <ClInclude Include="shapes\vertex.h" />
   </ItemGroup>
 </Project>
