--- a/LiquidConnections/LiquidConnections.vcxproj
+++ b/LiquidConnections/LiquidConnections.vcxproj
@@ -174,6 +174,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="shapes\face.cpp" />
+    <ClCompile Include="shapes\vector.cpp" />
     <ClCompile Include="stl\stl-loader.cpp" />
     <ClCompile Include="ui\ui.cpp" />
     <ClCompile Include="voxel\voxel-space.cpp" />
