--- a/LiquidConnections/LiquidConnections.csproj
+++ b/LiquidConnections/LiquidConnections.csproj
@@ -86,7 +86,13 @@
     <Compile Include="Geometry\Vertex.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Geometry\Bounds.cs" />
     <Compile Include="Stl\StlReader.cs" />
+    <Compile Include="VoxelSpace\DiscreteBounds.cs" />
+    <Compile Include="VoxelSpace\DiscreteCoordinates.cs" />
+    <Compile Include="VoxelSpace\DiscreteEdge.cs" />
+    <Compile Include="VoxelSpace\VoxelSpaceBuilder.cs" />
+    <Compile Include="VoxelSpace\VoxelSpaceReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -94,6 +100,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Shapes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Alea.3.0.4\build\Alea.targets" Condition="Exists('..\packages\Alea.3.0.4\build\Alea.targets')" />
