--- a/LiquidConnections/LiquidConnections.csproj
+++ b/LiquidConnections/LiquidConnections.csproj
@@ -94,7 +94,9 @@
     <Compile Include="VoxelSpace\DiscreteCoordinates.cs" />
     <Compile Include="VoxelSpace\DiscreteEdge.cs" />
     <Compile Include="VoxelSpace\VoxelCell.cs" />
+    <Compile Include="VoxelSpace\FullVoxelCell.cs" />
     <Compile Include="VoxelSpace\VoxelSpaceBuilder.cs" />
+    <Compile Include="VoxelSpace\VoxelSpaceCombiner.cs" />
     <Compile Include="VoxelSpace\VoxelSpaceReader.cs" />
   </ItemGroup>
   <ItemGroup>
