Moving box somewhere else.

--- a/LiquidConnections/LiquidConnections.csproj
+++ b/LiquidConnections/LiquidConnections.csproj
@@ -87,6 +87,8 @@
     <Compile Include="Geometry\Ray.cs" />
     <Compile Include="Geometry\Vector.cs" />
     <Compile Include="Geometry\Vertex.cs" />
+    <Compile Include="Models\Box.cs" />
+    <Compile Include="Models\IModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Geometry\Bounds.cs" />
