--- a/LiquidConnections/LiquidConnections.csproj
+++ b/LiquidConnections/LiquidConnections.csproj
@@ -89,10 +89,11 @@
     <Compile Include="Geometry\Vertex.cs" />
     <Compile Include="Resources\Models\Box.cs" />
     <Compile Include="Resources\Models\IModel.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="LiquidConnections.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Geometry\Bounds.cs" />
     <Compile Include="Resources\Shaders\ShadingProgram.cs" />
+    <Compile Include="Resources\Shaders\Shader.cs" />
     <Compile Include="Shapes\ShapeNormalizer.cs" />
     <Compile Include="Stl\StlReader.cs" />
     <Compile Include="VoxelSpace\DiscreteBounds.cs" />
