--- a/RotatingVoxels/RotatingVoxels.csproj
+++ b/RotatingVoxels/RotatingVoxels.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Geometry\Bounds.cs" />
     <Compile Include="Resources\Shaders\ShadingProgram.cs" />
     <Compile Include="Resources\Shaders\Shader.cs" />
+    <Compile Include="Scene\BunnyScene.cs" />
+    <Compile Include="Scene\IScene.cs" />
     <Compile Include="Scene\ShapeLoader.cs" />
     <Compile Include="Shapes\ShapeNormalizer.cs" />
     <Compile Include="Stl\StlReader.cs" />
