--- a/RotatingVoxels/RotatingVoxels.csproj
+++ b/RotatingVoxels/RotatingVoxels.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Resources\Shaders\ShadingProgram.cs" />
     <Compile Include="Resources\Shaders\Shader.cs" />
     <Compile Include="Scene\BallScene.cs" />
+    <Compile Include="Scene\MultiShapeScene.cs" />
     <Compile Include="Scene\RotatingScene.cs" />
     <Compile Include="Scene\BunnyScene.cs" />
     <Compile Include="Scene\IScene.cs" />
